Add polygon pre-tessellation to the java converter Add new TypeScript decoder